# Real-Vuln-Benchmark

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SPEC.md  TODO.md  batch_fetch.py  benchmark-manifest.json  build_hf_dataset.py  clone_repos.py  dashboard.py  fetch_results.py  full_spec.md  heatmap.py  heatmap_dvga.py  initial_build.md  opencode.json  pyproject.toml  run_baseline.py  score.py  smoke_test.py  validate_gt.py
.github/workflows/: deploy-dashboard.yml
config/: cwe-families.json
ground-truth/RealVuln-DSVW/: ground-truth.json
ground-truth/Reavuln-Damn-Vulnerable-GraphQL-Application/: ground-truth.json
ground-truth/realvuln-DSVPWA/: ground-truth.json
ground-truth/realvuln-DVBLab/: ground-truth.json
ground-truth/realvuln-DjanGoat/: ground-truth.json
ground-truth/realvuln-Flask_XSS/: ground-truth.json
ground-truth/realvuln-Intentionally-Vulnerable-Python-Application/: ground-truth.json
ground-truth/realvuln-OWASP-Web-Playground-/: ground-truth.json
ground-truth/realvuln-PythonSSTI/: ground-truth.json
ground-truth/realvuln-ThreatByte/: ground-truth.json
ground-truth/realvuln-VAmPI/: ground-truth.json
ground-truth/realvuln-Vulnerable-Flask-App/: ground-truth.json
ground-truth/realvuln-Vulnerable_Python_Apps/: ground-truth.json
ground-truth/realvuln-Vulnerable_Tornado_App/: ground-truth.json
ground-truth/realvuln-damn-vulnerable-flask-application/: ground-truth.json
ground-truth/realvuln-damn-vulnerable-graphql-application/: ground-truth.json
ground-truth/realvuln-defdev-app/: ground-truth.json
ground-truth/realvuln-djangoat/: ground-truth.json
ground-truth/realvuln-dsvpwa/: ground-truth.json
ground-truth/realvuln-dsvw/: ground-truth.json
ground-truth/realvuln-dvblab/: ground-truth.json
ground-truth/realvuln-dvpwa/: ground-truth.json
ground-truth/realvuln-extremely-vulnerable-flask-app/: ground-truth.json
ground-truth/realvuln-flask-xss/: ground-truth.json
hf-dataset/: README.md
llm-bench/: README.md
llm-bench/config/: eval-config.yaml  (+1 more)
paper/: Makefile  README.md  arxiv.sty  main.tex  references.bib
parsers/: __init__.py  base.py  semgrep.py
prompts/: gt-generation-prompt.md  prompt.md  validate-scanner-findings.md
reports/: dashboard.html  dashboard.json  index.html  wrangler.jsonc
scorer/: matcher.py  metrics.py
tests/: test_matcher.py  test_metrics.py  test_parsers.py
tools/: SECLAB_AGENT_SETUP.md  run_seclab_all_repos.py  run_seclab_all_repos.sh  seclab_to_semgrep.py
(+3008 files in other folders)
