[project]
name = "realvuln"
version = "0.1.0"
description = "Open benchmark for evaluating security scanners against real-world vulnerabilities"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dashboard = ["plotly>=5.0"]
llm-bench = [
    "pyyaml>=6.0",
    "openhands-ai>=0.30",
    "plotly>=5.0",
    "anthropic>=0.39",
    "openai>=1.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "plotly>=5.0",
    "pyyaml>=6.0",
]

[project.scripts]
realvuln-score = "score:main"
realvuln-dashboard = "dashboard:main"
realvuln-validate = "validate_gt:main"
realvuln-clone = "clone_repos:main"
realvuln-smoke-test = "smoke_test:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["parsers*", "scorer*"]

[tool.pytest.ini_options]
testpaths = ["tests", "llm-bench/tests"]
pythonpath = [".", "llm-bench"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml.*", "openhands.*"]
ignore_missing_imports = true
